_ Se agrega el panel para insertar Motherboards. _ Correccion de insercion de imagenes con verificador. _ Se cambió el textbox de la marca del procesador por una lista desplegable.
_ Se agregaron validadores de campos por el lado del cliente.

_ Se corrigió el bug que insertaba numeros con partes decimales en ".00".

_ Se corrigió el bug que pedia llenar un campo que era invisible.

_ Se añadieron barras de rango en los campos de frecuencias de ram.

_ Se corrigieron las listas desplegables que no verificaban las selecciones vacias

_ Los campos de precio son ahora numericos por el lado del cliente con valor minimo de 0

_ Los valores minimos para las frecuencias de ram es 2133 Mhz, de acuerdo al mercado

_ Los valores maximos para las frecuencias de ram es de 5100 Mhz, de acuerdo al mercado

_ El valor minimo para la frecuencia de CPU es de 0.5 Ghz

_ La cantidad minima de nucleos de procesador es de 1

--- a/css/estilos.css
+++ b/css/estilos.css
@@ -10,6 +10,13 @@ width: 600px;
 text-align:left;
 }
 
+.carousel-inner img{
+  height: 100px;
+  width : 100px;
+}
+
+
+
 #tabla1 table tr td {
 width: 150px
 }
